# pasm

./: .gitignore  README.md  TODO  imgui_schema_editor.ini  pasm_schema_editor.json  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ASSEMBLY_DEBUGGER_TUI_SPEC.md  COMPUTER_SYSTEMS.md  CONSOLES.md  DEBUGGER_REQUIREMENTS.md  HOST_HAL_PLAN.md  ISA_FORMAT.md  PLAN.md  TODO  cassette_transport.md  codegen_split_plan.md  cpc464_hardware_mapping.md  missing_systems.md  nes_architecture.md  new_systems.md  system_separation_refactor_plan.md
docs/plans/: schema_editor_plan.md
examples/: minimal8.yaml  mos6502.yaml  mos6510.yaml  sectorz_hello.c  sectorz_out_harness.c  simple8.yaml  simple_cpu.yaml  z80.yaml  z80_sectorz_hooks.yaml
examples/cassette_sources/: cas_file.yaml  cdt_file.yaml  coco_cas_file.yaml  line_in.yaml  msx_cas_file.yaml  msx_tsx_file.yaml  tap_file.yaml  uef_file.yaml  wav_file.yaml  zx_tap_file.yaml  zx_tzx_file.yaml  zx_wav_file.yaml
examples/floppy_drives/: apple2_diskii.yaml  atari_1050.yaml  bbc_3_5_adfs.yaml  bbc_5_25_dfs.yaml  c64_1541.yaml  coco_fd501.yaml  cpc_fd1.yaml  msx_3_5_dd.yaml  trs80_model4_internal.yaml  zx_plusd.yaml
examples/floppy_sources/: adl_file.yaml  atr_file.yaml  d64_file.yaml  dmk_file.yaml  do_file.yaml  dsd_file.yaml  dsk_file.yaml  jv1_file.yaml  jv3_file.yaml  po_file.yaml  ssd_file.yaml  trd_file.yaml  woz_file.yaml
examples/processors/: mc6809.yaml  minimal8.yaml  mos6502.yaml  mos6509.yaml  mos6510.yaml  ricoh2a03.yaml  simple8.yaml  simple_cpu.yaml  z80.yaml
examples/systems/: minimal8_default.yaml  mos6502_default.yaml  mos6510_default.yaml  simple8_default.yaml  simple_cpu_default.yaml  z80_default.yaml  z80_sectorz_hooks.yaml
pasm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
schemas/: cartridge_schema.json  cassette_schema.json  cassette_source_schema.json  controller-mapper.schema.json  device_schema.json  floppy_drive_schema.json  floppy_source_schema.json  host_schema.json  ic_schema.json  isa_schema.json  keyboard-keymapper.schema.json  processor_schema.json  runtime_controller_map_schema.json  runtime_keyboard_map_schema.json  system_schema.json
scripts/: analyze_cycles.py  analyze_trace.py  backup_nes_state.sh  compare_logs.py  find_drift.py  merge_keyboard_maps.py  restore_nes_state.sh  run_amstrad_cpc464_debugger.bat  run_amstrad_cpc464_debugger.sh  run_amstrad_cpc464_default.sh  run_amstrad_cpc464_interactive.bat  run_amstrad_cpc464_interactive.sh  run_amstrad_cpc464_no_tui.sh  run_apple2_debugger.bat  run_apple2_debugger.sh  run_apple2_default.bat  run_apple2_default.sh  run_apple2_interactive.bat  run_apple2_interactive.sh  run_atari2600_debugger.bat  run_atari2600_debugger.sh  run_atari2600_default.sh  run_atari2600_interactive.bat  run_atari2600_interactive.sh  run_atari2600_no_tui.sh  run_atari800xl_debugger.bat  run_atari800xl_debugger.sh  run_atari800xl_default.bat  run_atari800xl_default.sh  run_atari800xl_interactive.bat  run_atari800xl_interactive.sh  run_atari800xl_no_tui.sh  run_bbc_micro_debugger.bat  run_bbc_micro_debugger.sh  run_bbc_micro_interactive.bat  run_bbc_micro_interactive.sh  run_bbc_micro_no_tui.sh  run_c64_debugger.bat  run_c64_debugger.sh  run_c64_default.bat  (+89 more)
src/: __init__.py  generator.py  logging_utils.py  main.py
src/analyzer/: dependencies.py  instruction_analyzer.py
src/codegen/: build_system.py  cpu_debug.py  cpu_debug_abi.py  cpu_decoder.py  cpu_header.py  cpu_hooks.py  cpu_impl.py  cpu_runtime.py  dispatch_contract.py  interrupts.py  split_layout.py  split_units.py  templates.py  test_harness.py
src/parser/: schema_validator.py  yaml_loader.py
src/utils/: helpers.py
tests/: support.py  test_apple2_basic.py  test_apple2_interactive_basic.py  test_atari2600_split_contract.py  test_atari800xl_split_contract.py  test_bbcmicro_split_contract.py  test_c64_basic.py  test_c64_interactive_basic.py  test_c64_split_contract.py  test_coco1_split_contract.py  test_codegen.py  test_cpc464_split_contract.py  test_display_output_devices.py  test_generation_contracts.py  test_host_backend_targets_examples.py  test_host_hal_neutral_examples.py  test_ic_ula.py  test_instruction_set_units.py  test_integration.py  test_interrupt_runtime_semantics.py  test_keymapper_runtime_identity.py  test_keymapper_ui_model.py  test_mc6809_basic.py  test_mc6809_coco1_basic.py  test_mc6809_cycle_reference.py  test_mc6809_runtime_semantics.py  test_mos6502_basic.py  test_mos6509_basic.py  test_mos6509_runtime_semantics.py  test_mos6510_basic.py  test_mos65xx_cycle_runtime_penalties.py  test_mos65xx_klaus.py  test_mos65xx_runtime_semantics.py  test_msx1_basic.py  test_msx1_split_contract.py  test_nes_split_contract.py  test_no_rom_fopen_fallbacks.py  test_opcode_behavior_regression.py  test_parser.py  test_ricoh2a03_nestest.py  (+14 more)
tests/data/: mc6809_cycle_reference.json  mc6809_opcode_behavior_reference.json  mos6502_opcode_behavior_reference.json  mos6509_opcode_behavior_reference.json  mos6510_opcode_behavior_reference.json  z80_cycle_reference.json
tools/controller_mapper_native/: CMakeLists.txt
tools/controller_mapper_native/src/: main.cpp
tools/debugger_tui/: Cargo.toml  README.md  build.rs
tools/keymapper_native/: CMakeLists.txt
tools/keymapper_ui/: README.md  __init__.py  app.py  legacy_app.py  (+4 more)
tools/schema_editor/: CMakeLists.txt
tools/schema_editor/src/: app.cpp  app.h  c_code_editor.cpp  c_code_editor.h  file_browser.cpp  file_browser.h  form_renderer.cpp  form_renderer.h  main.cpp  schema_parser.cpp  schema_parser.h  schema_registry.cpp  schema_registry.h  test_roundtrip.cpp  yaml_loader.cpp  yaml_loader.h
(+427 files in other folders)
